# gpr-regnet-risk-screening

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: gafr_regnet_lodo.yaml
docs/: experiments.md  model.md  reproducibility.md
examples/real_specimens/: README.md
scripts/: benchmark_complexity.py  build_result_figures.py  create_allsource_view.py  create_lodo_views.py  fewshot_real_calibration.py  predict_images.py  predict_real_specimens.py  run_lodo_baselines.sh  summarize_runs.py  train_risk_model.py  visualize_gradcam.py
src/gpr_risk/: __init__.py  models.py  train.py  transforms.py
