[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpr-regnet-risk-screening"
version = "0.1.0"
description = "GAFR-RegNet for GPR image-level internal-defect risk recognition"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "li7forward", email = "256107637+li7forward@users.noreply.github.com"}]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "Pillow>=9.0",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "torch>=2.0",
    "torchvision>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]
